--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0",
+    "class-variance-authority": "^0.7.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "formik": "^2.4.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
